--- a/EstudoCaso2.ipynb
+++ b/EstudoCaso2.ipynb
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1658,14 +1658,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Author: ZInga Rene\n",
+      "Author: Zinga Rene\n",
       "\n"
      ]
     }
    ],
    "source": [
     "%reload_ext watermark\n",
-    "%watermark -a \"ZInga Rene\""
+    "%watermark -a \"Zinga Rene\""
    ]
   },
   {
